# space-invaders-clone

./: .gitattributes  .gitignore  CMakeLists.txt  Justfile  README.md  index.html  install_emscripten.bat
assets/: dontfogetldtk.txt  enemy1.h
build-emc/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  space-invaders-clone.html  space-invaders-clone.js
build-emc/assets/: playership.h
src/: AssetManager.cpp  AssetManager.hpp  Debug.cpp  Debug.h  Debug.hpp  Enemies.cpp  Enemies.hpp  GameLoop.cpp  GameLoop.hpp  GameUtils.cpp  GameUtils.hpp  LevelManager.cpp  LevelManager.hpp  Player.cpp  Player.hpp  SceneManager.cpp  SceneManager.hpp  enemies.cpp  main.cpp  main.cpp.bkup  minshell.html
src/levels/: LevelBasic.cpp  LevelBasic.hpp  LevelOne.cpp  LevelOne.hpp
